--- a/src/components/RiskScore/RiskScoreOverall.module.scss
+++ b/src/components/RiskScore/RiskScoreOverall.module.scss
@@ -6,7 +6,7 @@
   border-radius: 16px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-start;
   gap: 32px;
 
