--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,9 @@
-/* Global styles */
+@import './variables.scss';
+@import './mixins.scss';
+
 :root {
   --max-width: 1100px;
-  --border-radius: 12px;
+  --border-radius: #{$border-radius-md};
   --font-mono: ui-monospace, menlo, monaco, 'Cascadia Mono', 'Segoe UI Mono', 'Roboto Mono', 'Oxygen Mono',
     'Ubuntu Monospace', 'Source Code Pro', 'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 }
@@ -20,11 +22,15 @@ body {
 
 body {
   min-height: 100vh;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: $font-size-md;
+  color: $color-text-primary;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
-/* Dark mode styles will be handled by ThemeContext */
